change label of book button

--- a/partyman v1/index.html
+++ b/partyman v1/index.html
@@ -87,7 +87,7 @@
                             <li>
                                 <!--<a href="html/booking.html" class="btn btn-default btn-lg"><i class=""></i> <span class="network-name">Book now</span></a>-->
                                 <div class="dropdown">
-                                  <button class="btn btn-default btn-lg" type="button" data-toggle="dropdown">Book now
+                                  <button class="btn btn-default btn-lg" type="button" data-toggle="dropdown">Choose location and book
                                   <span class=""></span></button>
                                   <ul class="dropdown-menu">
                                     <li><a href="html/booking.html">Basildon</a></li>
