--- a/partyman v1/index.html
+++ b/partyman v1/index.html
@@ -69,6 +69,13 @@
     <!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
+         <div class="carousel slide carousel-fade" data-ride="carousel">
+          <div class= carousel-inner role="listbox">
+              <div class="item active"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+          </div>
+          </div>
         <div class="container">
 
             <div class="row">
@@ -87,7 +94,7 @@
                             <li>
                                 <!--<a href="html/booking.html" class="btn btn-default btn-lg"><i class=""></i> <span class="network-name">Book now</span></a>-->
                                 <div class="dropdown">
-                                  <button class="btn btn-default btn-lg" type="button" data-toggle="dropdown">Book now
+                                  <button class="btn btn-default btn-lg" type="button" data-toggle="dropdown">Choose Location
                                   <span class=""></span></button>
                                   <ul class="dropdown-menu">
                                     <li><a href="html/booking.html">Basildon</a></li>
@@ -102,7 +109,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
 
@@ -112,12 +118,14 @@
     <!-- Page Content -->
 
 
-
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
+    <script src="./js/jquery.js"></script>
+    
+    <!--scripts-->
+    <script src="./js/index.js"></script>
+    
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 
 
 </body>
