--- a/partyman v1/html/booking.html
+++ b/partyman v1/html/booking.html
@@ -262,7 +262,7 @@
                       <div class='form-row'>
                         <div class='form-group card required'>
                           <label class='control-label'>Card Number</label>
-                          <input autocomplete='off' class='form-control card-number' size='20' type='text'>
+                          <input autocomplete='off' class='form-control card-number' required size='20' type='text'>
                         </div>
                       </div>
                       <div class='form-row'>
@@ -284,6 +284,12 @@
                           <label class='control-label'>Year</label>
                           <input class='form-control card-expiry-year' placeholder='YYYY' size='4' type='text'>
                         </div>
+                      <div class='form-row'>
+                        <div class='form-group card required'>
+                          <label class='control-label'>Email</label>
+                          <input autocomplete='off' class='form-control' size='20' type='text'>
+                        </div>
+                      </div>
                       </div>
                       <div class='form-row'>
                         <div class='form-group'>
