--- a/partyman v1/index.html
+++ b/partyman v1/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <img id="logo" src="img/logo.png" />
-    
+
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
             <div class="navbar-header">
@@ -89,7 +89,7 @@
                             </li>
                             <li>
                                 <!--<a href="html/booking.html" class="btn btn-default btn-lg"><i class=""></i> <span class="network-name">Book now</span></a>-->
-                                <div class="dropdown">
+                                <!--<div class="dropdown">
                                   <button class="btn btn-default btn-lg" type="button" data-toggle="dropdown">Choose Location
                                   <span class=""></span></button>
                                   <ul class="dropdown-menu">
@@ -99,7 +99,8 @@
                                     <li><a href="html/booking.html">Stevenage</a></li>
                                     <li><a href="html/booking.html">Wembley</a></li>
                                   </ul>
-                                </div>
+                                </div> -->
+                                 <a href="html/booking.html"><button class="btn btn-default btn-lg" type="button">Book Now</button></a>
                             </li>
                         </ul>
                     </div>
