--- a/partyman v1/html/booking-test.html
+++ b/partyman v1/html/booking-test.html
@@ -106,23 +106,23 @@
               <!-- STEP 2 -->
               <div id="container-step-2" class="panel panel-default">
                 <form id="step-2-submit-form">
-                    <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion"><input type="button" class="btn btn-secondary btn-lg btn-block button-setting" value="2 Date & Time"></input></a><span style="display:none" id="step-2-submit-valid-icon" class="glyphicon glyphicon-ok"></span>
-                    </h4>
-                  </div>
-                  <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      <div style="overflow:hidden;">
-                        <div class="form-group">
-                          <div class="row">
-                            <div class="col-md-8">
-                              <div id="datetimepicker12"></div>
-                            </div>
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion"><input type="button" class="btn btn-secondary btn-lg btn-block button-setting" value="2 Date & Time"></input></a><span style="display:none" id="step-2-submit-valid-icon" class="glyphicon glyphicon-ok"></span>
+                  </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <div style="overflow:hidden;">
+                      <div class="form-group">
+                        <div class="row">
+                          <div class="col-md-8">
+                            <div id="datetimepicker12"></div>
                           </div>
                         </div>
                       </div>
-                      <input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="btn btn-primary" value="Back" />
-                      <input id="step-2-submit" type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="btn btn-primary step-continue" value="Next" />
+                    </div>
+                    <input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="btn btn-primary" value="Back" />
+                    <input id="step-2-submit" type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="btn btn-primary step-continue" value="Next" />
                   </form>
                 </div>
 
@@ -201,16 +201,24 @@
               <h5>Extras</h5>
             </div>
             <div class="col-xs-4">
-
             </div>
             <hr>
           </div>
           <div class="row">
            <div class="col-xs-4 col-md-offset-2">
-            <p>Clown</p>
+            <p>Cosmo the dragon</p>
           </div>
           <div class="col-xs-4">
-            <p>Yes</p>
+            <input checked="true" style="float: left" disabled="true" type="checkbox" />
+          </div>
+          <hr>
+        </div>
+          <div class="row">
+           <div class="col-xs-4 col-md-offset-2">
+            <p>Face painters</p>
+          </div>
+          <div class="col-xs-4">
+             <input checked="true" style="float: left" disabled="true" type="checkbox" />
           </div>
           <hr>
         </div>
