--- a/partyman v1/html/receipt.html
+++ b/partyman v1/html/receipt.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="../css/landing-page.css" rel="stylesheet">
-
+    <link href="../css/receipt.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -74,12 +74,13 @@
             <div class="row">
                 <div class="col-lg-8  col-md-offset-2">
                     <div class="intro-message">
-                        <div class="booking-container">
+                        <div id="receipt-container" class="booking-container">
                             <h1>Receipt</h1>
 
                             <div class="booking-section ">
                                 <p>Your booking is confirmed.<p>
                                 <p>We are looking forward to seeing you!</p>
+                                <p>You will shortly recive an receipt on your email</p>
                             </div>
                         </div>
                     </div>
