--- a/partyman v1/html/booking-test.html
+++ b/partyman v1/html/booking-test.html
@@ -94,10 +94,93 @@
                         <p>All parties include a minimum of 30 minutes playtime and 30 minutes for eating</p>
                       </div>
                       <div class="row">
+                          <table class="table table-hover dennetable-info">
+                                                <thead>
+                                                  <tr>
+                                                    <th>Party</th>
+                                                    <th>Price</th>
+                                                    <th>Attendance</th>
+                                                    <th>Book</th>  
+                                                    
+                                                  </tr>
+                                                    
+                                                </thead>
+                                                <tbody>
+                                                  <tr>
+                                                    <td><h4>Partyman Time</h4><br>- 90 minutes playtime<br>- 30 minutes for eating<br>- Invitations and Thank You cards<br>- A "Fabadousa Present" for the birthday child<br>- Cold buffet</td>
+                                                    <td>12,99£ per child</td>
+                                                        <td>
+                                                            <select class="form-control">
+                                                                <option value="10">10</option>
+                                                                <option value="11">11</option>
+                                                                <option value="12">12</option>
+                                                                <option value="13">13</option>
+                                                                <option value="14">14</option>
+                                                            </select>
+                                                        </td>
+                                                    <td><input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn btn-primary " value="Select" /></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><h4>Play and Laser</h4><br>- 60 minutes playtime<br>- 30 minutes for eating<br>- Invitations and Thank You cards<br>- 30 min laser combat play<br>- Cold buffet</td>
+                                                    <td>16£ per child</td>
+                                                      <td>
+                                                        <select class="form-control">
+                                                                <option value="10">10</option>
+                                                                <option value="11">11</option>
+                                                                <option value="12">12</option>
+                                                                <option value="13">13</option>
+                                                                <option value="14">14</option>
+                                                        </select>
+                                                      </td>
+                                                    <td><input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn btn-primary " value="Select" /></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><h4>Arts and Crafts</h4><br>- 45 minutes playtime<br>- 45 minutes arts and craft<br>- Choose between pottery and Art Attack<br>- 30 minutes for eating<br>- Invitations and Thank You cards<br>- Cold buffet<br></td>
+                                                    <td>13,99£ per child</td>
+                                                      <td>
+                                                        <select class="form-control">
+                                                                <option value="10">10</option>
+                                                                <option value="11">11</option>
+                                                                <option value="12">12</option>
+                                                                <option value="13">13</option>
+                                                                <option value="14">14</option>
+                                                        </select>
+                                                      </td>
+                                                    <td><input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn btn-primary apesaus" value="Select" /></td>
+                                                  </tr>
+                                                    <tr>
+                                                    <td><h4>Make a Bear</h4><br>- 90 minutes playtime<br>- 30 minutes for eating<br>- Invitations and Thank You cards<br>- Cold buffet<br></td>
+                                                    <td>17,99£ per child</td>
+                                                        <td>
+                                                            <select class="form-control">
+                                                                <option value="10">10</option>
+                                                                <option value="11">11</option>
+                                                                <option value="12">12</option>
+                                                                <option value="13">13</option>
+                                                                <option value="14">14</option>
+                                                        </select>
+                                                        </td>
+                                                    <td><input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn btn-primary " value="Select" /></td>
+                                                  </tr>
+                                                    <tr>
+                                                    <td><h4>Private hire</h4><br>- Two hours party<br>- Have the whole place for yourself!<br></td>
+                                                    <td>17,99£ per child</td>
+                                                        <td>
+                                                            <select class="form-control">
+                                                                <option value="10">10</option>
+                                                                <option value="11">11</option>
+                                                                <option value="12">12</option>
+                                                                <option value="13">13</option>
+                                                                <option value="14">14</option>
+                                                        </select>
+                                                        </td>
+                                                    <td><input type="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn btn-primary " value="Select" /></td>
+                                                  </tr>
+                                                </tbody>
+                                              </table>
                       </div>
                     </div>
                     <br>
-                    <input type="button" id="step-1-submit" data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn btn-primary step-continue" value="Select" />
                   </div>
                 </form>
               </div>
